# hyperliquid-smart-wallet-observer

./: .env.example  .gitattributes  .gitignore  AGENTS (1).md  AGENTS.md  CODEX_GOAL.txt  CODEX_OBJECTIVE_PROMPT.md  CREER_ARCHIVE_PROPRE.cmd  LANCER_HYPERSMART.cmd  README (1).md  README.md  codex_objective.md  pyproject.toml  requirements.txt  verify_ui_v5.py
config/: leaderboard_candidates.example.csv  profitability_max.example.yaml  risk_limits.example.yaml  settings.example.yaml  wallets.example.yaml
data/: leaderboard_shortlist.json
docs/: CODEBASE_UML.md  CODEX_HYPERSMART_MASTER_PLAN_V6.md  CODEX_HYPERSMART_MASTER_PLAN_V7_ACTION_BOUNDARY.md  CODEX_MEGAPROMPT_V9.md  CODEX_PROMPT_FIX_LOGS_AND_V9.md  DOCS_INDEX.md  HYPERLIQUID_RESEARCH_NOTES.md  HYPERSMART_AGENT_SAFE_READONLY_TOOLS_FUSION.md  HYPERSMART_API_LIMITS.md  HYPERSMART_ARCHIVE_GUIDE.md  HYPERSMART_BACKTESTING.md  HYPERSMART_COMMON_DATA_MODEL_FUSION.md  HYPERSMART_COPY_MODE.md  HYPERSMART_COPY_OBSERVER_BATCH1.md  HYPERSMART_COPY_SIGNAL_DETECTOR.md  HYPERSMART_DASHBOARD.md  HYPERSMART_DASHBOARD_FUSION.md  HYPERSMART_DATA_PIPELINE.md  HYPERSMART_EXPLORER_OBSERVER.md  HYPERSMART_FUSION_ROADMAP_V12.md  HYPERSMART_FUSION_ROADMAP_V8.md  HYPERSMART_FUSION_ROADMAP_V9.md  HYPERSMART_HYPERLIQUID_SCAN_STRATEGY_FUSION.md  HYPERSMART_LEADERBOARD_DISCOVERY.md  HYPERSMART_LICENSE_SAFETY_POLICY.md  HYPERSMART_LONG_RUN_WORKLOG.md  HYPERSMART_MAGIC_BOT_REALTIME_RESEARCH.md  HYPERSMART_MAGIC_BOT_RESEARCH_DIGEST.md  HYPERSMART_MAGIC_BOT_RESEARCH_README.md  HYPERSMART_MARKET_SIGNAL_FEATURES_FUSION.md  HYPERSMART_NO_FAKE_DATA_NO_HYPE_NO_EXECUTION_POLICY.md  HYPERSMART_NO_TRADE_REPORT.md  HYPERSMART_PATTERN_DETECTION.md  HYPERSMART_POSITION_LIFECYCLE.md  HYPERSMART_RISK_ENGINE_FUSION.md  HYPERSMART_SAFETY_AUDIT_REPORT.md  HYPERSMART_WALLET_DISCOVERY.md  HYPERSMART_WALLET_INTELLIGENCE_FUSION.md  HYPERSMART_WEBSOCKET_MONITOR.md  NO_REAL_LOSS_PROTOCOL.md  (+4 more)
dydx_smart_wallet_observer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hyper_smart_observer/: __init__.py
tests/: hl_runtime_fakes.py  test_adaptive_risk_filter.py  test_audit_pnl_jules.py  (+337 more)
(+890 files in other folders)
