[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperliquid-smart-wallet-observer"
version = "0.1.0"
description = "Read-only Hyperliquid smart-wallet observer with paper trading and locked testnet scaffolding."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.5,<3",
    "PyYAML>=6,<7",
    "SQLAlchemy>=2.0,<3",
    "typer>=0.12,<1",
    "websockets>=10,<11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.5,<1",
]

[project.scripts]
hl-observer = "hl_observer.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["S101"]
